# TaoRuntime

./: CMakeLists.txt  README.md
include/: basic_vectorization.hpp  common.hpp  functions.hpp  gpu_funcs.hpp  intrinsics.hpp  tensor.hpp  test.hpp  thread_pool.hpp  utils.hpp
src/: basic_vectorization.cu  gpu_funcs.cu  tensor.cpp  test.cu
test/: test_misc.cpp  test_third.cpp  test_tp.cpp  test_unary.cpp
